unpackaged/main/default/objects/SBQQ__ImportFormat__c/fields/SBQQ__Active__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When activated, the input format becomes available for use.</description>
    <inlineHelpText>Select the checkbox to make the input format available for use.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>