unpackaged/main/default/objects/SBQQ__ImportFormat__c/validationRules/SBQQ__Num_Unique_Key_is_not_one.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Num_Unique_Key_is_not_one</fullName>
    <active>true</active>
    <description>More than 1 unique key defined in Import Column.</description>
    <errorConditionFormula>If(SBQQ__UniqueKeyCount__c &gt; 1, true, false)</errorConditionFormula>
    <errorMessage>More than 1 unique key defined in Import Column.</errorMessage>
</ValidationRule>